Updated layout and removed side panel image

--- a/src/App.css
+++ b/src/App.css
@@ -208,7 +208,8 @@ button {
   background-color: #fff;
 }
 
-button .icon, .fa-paper-plane {
+button .icon,
+.fa-paper-plane {
   transition: 0.4s ease;
 }
 
@@ -220,7 +221,8 @@ button:hover .icon {
   margin-left: 20px;
 }
 
-button:hover .icon, button:hover .fa-paper-plane {
+button:hover .icon,
+button:hover .fa-paper-plane {
   color: var(--color-blue);
 }
 
@@ -246,66 +248,47 @@ button:has(.facebook):hover {
   width: 100vw;
   height: var(--landing-window-height);
   display: flex;
+  flex-direction: column;
 
-  .left-pane, .right-pane {  
-    height: var(--landing-window-height);
+  img {
+    margin: 20px;
   }
 
-  .right-pane {
-    width: 40vw;
+  .auth-providers {
+    justify-self: flex-end;
+    align-self: center;
 
-    .landing-page-banner {
-      width: 40vw;
-      height: var(--landing-window-height);
+    button {
+      width: 250px;
     }
   }
 
-  .left-pane {
-    width: 60vw;
+  .auth-providers button:first-child {
+    margin-right: 20px;
+  }
+
+  .app-content {
+    align-self: center;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 5%;
 
-    img  {
-      margin: 20px;
+    .heading {
+      text-align: center;
+      font-size: 50px;
+      font-weight: 400;
+      margin-bottom: 20px;
     }
 
-    .auth-providers {
-      justify-self: flex-end;
-      align-self: center;
-  
-      button {
-        width: 250px;
-      }
-    }
-  
-    .auth-providers button:first-child {
-      margin-right: 10px;
+    .heading span {
+      color: var(--color-blue);
     }
 
-    .left-pane-main {
-      align-self: center;
-      display: flex;
-      flex-direction: column;
-      margin:  12% 0 0 10%;
-
-      .heading, .desc {
-        margin:  0 0 5% 0;
-      }
-
-      .heading {
-        text-align: left;
-        font-size: 50px;
-        font-weight: 400;
-      }
-
-      .heading span {
-        color: var(--color-blue);
-      }
-
-      .desc {
-        text-align: left;
-        font-size: 18px;
-      }
+    .desc {
+      text-align: left;
+      font-size: 18px;
     }
   }
 }
@@ -331,7 +314,9 @@ button:has(.facebook):hover {
     margin: 0 10px;
   }
 
-  a:link, a:active, a:visited {
+  a:link,
+  a:active,
+  a:visited {
     text-decoration: none;
     color: var(--color-grey);
   }
@@ -343,11 +328,24 @@ button:has(.facebook):hover {
 
 
 /* For Desktop View */
-@media screen and (min-width: 1024px) {
-}
+@media screen and (min-width: 1024px) {}
 
 /* For Tablet View */
 @media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .app-logo {
+    width: 15%;
+  }
+
+  .chat-input {
+    min-width: 90%;
+  }
+
+  .landing-window {
+
+    .app-content {
+      width: 70vw;
+    }
+  }
 }
 
 /* For Mobile Portrait View */
@@ -363,11 +361,11 @@ button:has(.facebook):hover {
   .chat-header {
     padding: 10px;
   }
-  
+
   .chat-input-area {
     padding: 10px;
   }
-  
+
 
   .chat-input {
     min-width: 80%;
@@ -384,68 +382,53 @@ button:has(.facebook):hover {
 
   .landing-window {
 
-    .left-pane {
-      width: 100vw;
+    img {
+      align-self: center;
+      margin: 10px 0;
+    }
 
-      img {
-        align-self: center;
-        margin: 10px 0;
+    .app-content {
+      width: 80vw;
+      margin: 0;
+
+      .heading {
+        font-size: 35px;
+        text-align: center;
       }
 
-      .left-pane-main {
-        width: 80vw;
-        margin: 0;
-        
-        .heading {
-          font-size: 35px;
-          text-align: center;
-        }
-
-        .desc {
-          margin-bottom: 20px;
-          text-align: center;
-        }
-      }
-
-      .auth-providers {
-        display: flex;
-        flex-direction: column;
-
-        button {
-          width: 300px;
-        }
-    
-        button:first-child {
-          margin-bottom: 10px;
-          margin-right: 0;
-        } 
+      .desc {
+        margin-bottom: 20px;
+        text-align: center;
       }
     }
 
-    .right-pane {
-      width: 0;
-      display: none;
+    .auth-providers {
+      display: flex;
+      flex-direction: column;
+
+      button {
+        width: 300px;
+      }
+
+      button:first-child {
+        margin-bottom: 10px;
+        margin-right: 0;
+      }
     }
   }
-
 }
 
 /* For Mobile Landscape View */
-@media screen and (max-device-width: 640px) and (orientation: landscape) {
-}
+@media screen and (max-device-width: 640px) and (orientation: landscape) {}
 
 /* For Mobile Phones Portrait or Landscape View */
-@media screen and (max-device-width: 640px) {
-}
+@media screen and (max-device-width: 640px) {}
 
 /* For iPhone 4 Portrait or Landscape View */
-@media screen and (min-device-width: 320px) and (-webkit-min-device-pixel-ratio: 2) {
-}
+@media screen and (min-device-width: 320px) and (-webkit-min-device-pixel-ratio: 2) {}
 
 /* For iPhone 5 Portrait or Landscape View */
-@media (device-height: 568px) and (device-width: 320px) and (-webkit-min-device-pixel-ratio: 2) {
-}
+@media (device-height: 568px) and (device-width: 320px) and (-webkit-min-device-pixel-ratio: 2) {}
 
 /* For iPhone 6 and 6 plus Portrait or Landscape View */
-@media (min-device-height: 667px) and (min-device-width: 375px) and (-webkit-min-device-pixel-ratio: 3) {
-}
+@media (min-device-height: 667px) and (min-device-width: 375px) and (-webkit-min-device-pixel-ratio: 3) {}
