--- a/src/App.css
+++ b/src/App.css
@@ -57,145 +57,6 @@ body {
   max-height: auto;
 }
 
-/* Chat */
-
-.chat-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  height: var(--chat-header-height);
-  border-bottom: var(--border);
-}
-
-.chat-window {
-  width: 100vw;
-  height: var(--chat-window-height);
-  flex: 1;
-  overflow-y: scroll;
-  padding-left: 6%;
-  padding-right: 6%;
-  background: #ffff;
-}
-
-.chat-input-area {
-  display: flex;
-  position: fixed;
-  width: 100vw;
-  bottom: 0;
-  padding: 15px;
-  border: none;
-  height: var(--input-area-height);
-}
-
-.chat-input-area::after {
-  content: attr(data-replicated-value) " ";
-  white-space: pre-wrap;
-  visibility: hidden;
-}
-
-.chat-input {
-  font: 1em sans-serif;
-  flex: 1;
-  min-width: 95%;
-  height: 50px;
-  line-height: 20px;
-  font-size: 16px;
-  font-weight: 500;
-  padding: 10px 20px;
-  margin-right: 10px;
-  align-content: center;
-  border: var(--border);
-  border-radius: 5px;
-  background-color: #fff;
-  resize: none;
-  position: sticky;
-}
-
-.chat-input:focus {
-  outline: none;
-  border: var(--border-blue);
-}
-
-.chat-input::-webkit-scrollbar {
-  width: 0;
-}
-
-.chat-input {
-  align-self: flex-end;
-}
-
-.chat-btn {
-  align-self: flex-end;
-}
-
-.chat-disclaimer {
-  display: flex;
-  justify-content: center;
-  color: var(--color-grey);
-  font-size: 14px;
-  margin-top: 15px;
-  margin-bottom: 10px;
-}
-
-/* Messages */
-
-.msg {
-  display: flex;
-  align-items: flex-end;
-  margin-bottom: 10px;
-}
-
-.msg:last-of-type {
-  margin: 10px;
-}
-
-.msg-text {
-  line-height: 20px;
-}
-
-.msg-info {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-.msg-info-name {
-  margin-right: 10px;
-  font-weight: bold;
-}
-
-.msg-info-time {
-  font-size: 0.85em;
-}
-
-/* Left Message */
-
-.msg-bubble {
-  max-width: 80%;
-  padding: 15px;
-  border-radius: 15px;
-  background-image: var(--left-bubble-bg);
-}
-
-.left-msg .msg-bubble {
-  border-bottom-left-radius: 0;
-}
-
-/* Right Message */
-
-.right-msg {
-  flex-direction: row-reverse;
-  margin: 0 0 10px 10px;
-}
-
-.right-msg .msg-bubble {
-  background-image: var(--right-bubble-bg);
-  border-bottom-right-radius: 0;
-  color: #fff;
-}
-
 /* Buttons */
 
 button {
@@ -339,9 +200,14 @@ button:has(.facebook):hover {
   }
 }
 
-
 /* For Desktop View */
-@media screen and (min-width: 1024px) {}
+@media screen and (min-width: 1024px) {
+
+  .app-logo-banner {
+    max-width: 200px;
+  }
+
+}
 
 /* For Tablet View */
 @media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
@@ -349,8 +215,8 @@ button:has(.facebook):hover {
     width: 15%;
   }
 
-  .chat-input {
-    min-width: 90%;
+  .app-logo-banner {
+    max-width: 200px;
   }
 
   .landing-window {
@@ -368,24 +234,7 @@ button:has(.facebook):hover {
   }
 
   .app-logo-banner {
-    max-width: 60%;
-  }
-
-  .chat-header {
-    padding: 10px;
-  }
-
-  .chat-input-area {
-    padding: 10px;
-  }
-
-
-  .chat-input {
-    min-width: 80%;
-  }
-
-  .chat-disclaimer {
-    font-size: 10px;
+    max-width: 165px;
   }
 
   button {
@@ -436,7 +285,60 @@ button:has(.facebook):hover {
 @media screen and (max-device-width: 640px) and (orientation: landscape) {}
 
 /* For Mobile Phones Portrait or Landscape View */
-@media screen and (max-device-width: 640px) {}
+@media screen and (max-device-width: 640px) {
+
+  .app-logo {
+    max-width: 15%;
+  }
+
+  .app-logo-banner {
+    max-width: 165px;
+  }
+
+  button {
+    min-width: 50px;
+    width: 400px;
+  }
+
+  .landing-window {
+
+    img {
+      align-self: center;
+      margin: 20px 0;
+    }
+
+    .app-content {
+      width: 80vw;
+      margin: 0;
+
+      .heading {
+        font-size: 30px;
+        text-align: center;
+        margin-bottom: 20px;
+      }
+
+      .desc {
+        margin-bottom: 20px;
+        text-align: center;
+      }
+    }
+
+    .auth-providers {
+      display: flex;
+      flex-direction: column;
+
+      button {
+        width: 300px;
+      }
+
+      button:first-child {
+        margin-bottom: 10px;
+        margin-right: 0;
+      }
+    }
+  }
+
+}
 
 /* For iPhone 4 Portrait or Landscape View */
 @media screen and (min-device-width: 320px) and (-webkit-min-device-pixel-ratio: 2) {}
