Implemented loader when the page refresh is triggered

--- a/src/components/app/Loader.css
+++ b/src/components/app/Loader.css
@@ -4,7 +4,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3));
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2)), var(--landing-window-bg);
+    background-size: cover;
     position: fixed;
     top: 0;
     z-index: 9999;
