Made improvements to chat inline loader and added max width for button icons to fix an occasional bug with icon filling button width and height

--- a/src/components/app/Loader.css
+++ b/src/components/app/Loader.css
@@ -10,3 +10,12 @@
     top: 0;
     z-index: 9999;
 }
+
+.inline-loader {
+    width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
+    background-image: var(--left-bubble-bg);
+}
