--- a/src/App.css
+++ b/src/App.css
@@ -148,7 +148,8 @@ body {
       text-align: center;
       font-size: 50px;
       font-weight: 400;
-      margin-bottom: 3%;
+      margin-bottom: 10px;
+      min-height: 150px;
     }
 
     .heading span {
@@ -156,13 +157,12 @@ body {
     }
 
     .desc {
-      text-align: left;
+      text-align: center;
       font-size: 18px;
     }
 
     .desc span:last-child {
       color: var(--color-blue);
-      white-space: nowrap;
     }
   }
 }
@@ -258,6 +258,7 @@ body {
         font-size: 30px;
         text-align: center;
         margin-bottom: 20px;
+        min-height: 210px;
       }
 
       .desc {
@@ -316,6 +317,7 @@ body {
         font-size: 30px;
         text-align: center;
         margin-bottom: 20px;
+        min-height: 210px;
       }
 
       .desc {
