Fixed background height not filling view height on ipad screen

--- a/src/components/legal/Legal.css
+++ b/src/components/legal/Legal.css
@@ -1,5 +1,6 @@
 .legal-notice {
     width: 100vw;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
