--- a/src/components/upload/Upload.css
+++ b/src/components/upload/Upload.css
@@ -5,15 +5,17 @@
 }
 
 .file-upload {
-    align-self: flex-end;
+    z-index: 1;
+    position: absolute;
+    bottom: 0;
+    left: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
     min-width: 50px;
     width: 50px;
-    height: 50px;
+    height: var(--input-area-height);
     border: none;
-    background-color: #ffffff;
 }
 
 .file-upload .icon {
