--- a/src/components/chat/Chat.css
+++ b/src/components/chat/Chat.css
@@ -36,6 +36,13 @@
     visibility: hidden;
 }
 
+.chat-input-wrapper {
+    align-self: flex-end;
+    display: flex;
+    width: 100vw;
+    height: 50px;
+}
+
 .chat-input {
     font: 1em sans-serif;
     flex: 1;
@@ -45,7 +52,7 @@
     font-size: 16px;
     font-weight: 500;
     padding: 10px 20px 10px 40px;
-    margin-right: 10px;
+    margin: 0 5px;
     align-content: center;
     border: var(--border);
     border-radius: 30px;
@@ -73,7 +80,8 @@
     align-items: center;
     justify-content: center;
     border-radius: 30px;
-    max-width: 30px;
+    max-width: 50px;
+    height: 50px;
 }
 
 .chat-disclaimer {
@@ -177,7 +185,7 @@
     }
 
     .chat-input-area {
-        padding: 10px;
+        padding: 5px;
     }
 
     .chat-input {
